bdr.BDR.scala.error
Erreur de compilation :
BDR:3: error: '(' expected but identifier found.
  if msg=="R"{droite();avance()}
     ^BDR:12: error: illegal start of simple expression
} 
^